--- a/React/pet-pic/package.json
+++ b/React/pet-pic/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "pexels": "^1.4.0",
     "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primereact": "^9.4.0",
@@ -40,6 +41,8 @@
     ]
   },
   "react-dotenv": {
-    "whitelist": ["PEXELS_KEY"]
+    "whitelist": [
+      "PEXELS_KEY"
+    ]
   }
 }
